--- a/xgds_video/templates/xgds_video/image_stream_subnav.html
+++ b/xgds_video/templates/xgds_video/image_stream_subnav.html
@@ -4,8 +4,9 @@
 <form id="streamForm">
 <div class="sitemenu-nav-secondary">
 	<ul>
-		<li{% currentnav live_image_stream %}><a href="{% url 'live_image_stream' %}">Live</a></li>
-		<li {% currentnav archived_image_stream %}><a href="{% url 'archived_image_stream' %}">Archived</a></li>
+		<li {% currentnav live_image_stream %}><a href="{% url 'live_image_stream' %}">Live</a></li>
+		<li {% currentnav archived_image_stream %}><a href="{% url 'archived_image_stream' 'today'%}">Archived</a></li>
+		<li {% currentnav search_image_streams %}><a href="{% url 'search_image_streams' %}">Search</a></li>
   	</ul>
 </div>
 </form>
