css changes and url fix

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -123,8 +123,13 @@ div.ui-slider-range.ui-widget-header {
     padding-top:5px;
     margin-bottom:20px; 
     border-width:2px; 
-    border-style:solid;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    /*border-style:solid;*/
+    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+}
+
+.imageStream {
+	border-width:1.5px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
 
 .divider {
