--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -6,10 +6,10 @@
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" ></script>
     <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
     <script type="text/javascript">
-    	jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";
-    	var STATIC_URL='{{ STATIC_URL }}';
-    	var submitNoteUrl = '{% url record_simple %}';
-    	var isLive = false;
+        jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";
+        var STATIC_URL='{{ STATIC_URL }}';
+        var submitNoteUrl = '{% url record_simple %}';
+        var isLive = false;
     </script>
     <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
@@ -31,7 +31,7 @@
 
 {% block scripts %}
 {% endblock %}
-    
+
 {% load url from future %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
@@ -39,31 +39,31 @@
     {% nav "video.view" %}
     {{ block.super }}
     {% endblock %}
-    
-    {% block sitemenu-content-secondary %}    
+
+    {% block sitemenu-content-secondary %}
 		{% if episode %}
 			{% include "xgds_video/video_subnav.html" %}
     	{% else %}
     		{% include "xgds_video/image_stream_subnav.html" %}
     	{% endif %}
     {% endblock %}
-    
+
 {% block contents %}
 	{% if messages %}
 	    <ul class="messages" id="errorMessage" style="color:red;">
 	    {% for message in messages %}
-	        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	        <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
 	    {% endfor %}
 	    </ul>
 	{% endif %}
-	
+
     {% if segmentsJson %}
     	<table>
    			<tr>
-   				<td> <b> <label for="sliderTimeLabel">Local Flight Time: </label></b> </td>
+   				<td> <b> <label for="sliderTimeLabel">Local Time: </label></b> </td>
    				<td> <input type="text" id="sliderTimeLabel" readonly> </td>
    			</tr>
-		   	
+
 		   	{% if episode %}
 	   			<tr>
 	   				<td> <b> Episode (Flight) Name: </b> </td>
@@ -71,7 +71,7 @@
 	   			</tr>
    			{% endif %}
    		</table>
-   		
+
  		<fieldset style=" border-color: #e5e5e5">
 	 		<div id="masterSlider" class="masterSlider"></div>
           <div> 
@@ -81,7 +81,7 @@
           </div>
   		<div id="legend"></div>
  		</fieldset>
- 		
+
    		<table>
    			<tr id="seekTimeBox">
    				<td>
@@ -93,23 +93,23 @@
    				</td>
    			</tr>
    		</table>
-    		
+
     	<br>
 
         <div id="container" class="js-masonry" data-masonry-options='{"itemSelector": ".item", "gutter":5, "isInitLayout":false}'>
         {% for source in sources %}
 			<div class="item" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
-	                 <div class="toprow-left">Recorded Segment: {{ source.name }}</div> 
+	                 <div class="toprow-left">Recorded Segment: {{ source.name }}</div>
 	                 {% if episode %}
-					 	<a class="mybutton toprow-right" 
-					 	href="{% url 'xgds_video_recorded' %}?source={{ source.shortName }}&episode={{ episode.shortName }}" 
-					 	target="new">New Window</a>
+					 	<a class="mybutton toprow-right"
+					 	 href="{% url 'xgds_video_recorded' %}?source={{ source.shortName }}&episode={{ episode.shortName }}"
+					 	 target="new"> New Window </a>
 					 {% else %}
-					 	<a class="mybutton toprow-right" 
+					 	<a class="mybutton toprow-right"
 					 	href=# target="new">New Window</a>
 					 {% endif %}
-					 	
+
 	                 {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
@@ -140,6 +140,14 @@
 
 {% block jsInit %}
 {% include "xgds_video/init_notes.js" %}
+
+var indexFileUrl = null;
+{% if episode %}
+    indexFileUrl = "{% url 'xgds_video_index_file' 'flightAndSource' 'segmentIndex' %}";
+{% else %}
+    indexFileUrl = ""; //"{#% url 'xgds_video_index_file' 'date' 'segmentIndex' %#}"
+{% endif %}
+
  {% if segmentsJson %}
     //globals
     var xgds_video = { masterSlider: '',
@@ -151,11 +159,13 @@
                        displaySegments: {{ segmentsJson|safe }},
                        firstSegment: null,
                        lastSegment: null,
-                       skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml',
+                       //skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml',
                        onTimePlayer: "{{ sources.0.shortName }}",
                        movingSlider: false, //if slider is moving, turn off onTime call
-                       seekOffsetList: {}, //needed for seeking vid in flash mode
-	                   noteTimeStamp: toJsDateTime({{ noteTimeStamp|safe }}), 
+                       seekOffsetList: {}, //needed for seeking vid in flash mode,
+                       indexFileUrl: indexFileUrl,
+	                   noteTimeStamp: toJsDateTime({{ noteTimeStamp|safe }}),
+	                   date: {{ date }}
                      };
 
     // displaySegments are in json format like this:
