slider legend bug fix

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -165,7 +165,7 @@ var indexFileUrl = null;
                        seekOffsetList: {}, //needed for seeking vid in flash mode,
                        indexFileUrl: indexFileUrl,
 	                   noteTimeStamp: toJsDateTime({{ noteTimeStamp|safe }}),
-	                   date: {{ date }}
+	                   date: {{ videoDate }}
                      };
 
     // displaySegments are in json format like this:
