--- a/xgds_video/templates/xgds_video/SearchImageStreams.html
+++ b/xgds_video/templates/xgds_video/SearchImageStreams.html
@@ -37,10 +37,10 @@
 </thead>
 
 <tbody id="imageStreamsResults">
-	{% for date in dates %}
+ 	{% for date in dates %}
 		<tr>
 			<td>
-				<a href="{% url 'archived_image_stream' date %}">{{ date }}</a>
+				<a href="{% url 'archived_image_stream' date 'None' %}">{{ date }}</a>
 			</td>
 		</tr>
 	{% endfor %}
