refactoring to account for Vehicle, sources, model change

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -159,8 +159,7 @@ var indexFileUrl = null;
                        movingSlider: false, //if slider is moving, turn off onTime call
                        seekOffsetList: {}, //needed for seeking vid in flash mode,
                        indexFileUrl: indexFileUrl,
-	                   noteTimeStamp: toJsDateTime({{ noteTimeStamp|safe }}),
-	                   date: {{ videoDate }}
+	                   noteTimeStamp: toJsDateTime({{ noteTimeStamp|safe }})
                      };
 
     // displaySegments are in json format like this:
