masonry reloads so things don't overlap on live page

--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -50,8 +50,11 @@
 	 		</div>
  		{% endfor %}
 	</div>
- {% endblock %}
 
+    <script type="text/javascript">
+    var $container = $('#container').masonry();
+    </script>
+ {% endblock %}
 {% block jsInit %}
   {{ block.super }}
 	$(function() {
