--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -46,7 +46,7 @@
 				<section>
 	            {% include "xgds_video/video_notes.html" with data=source.form source=source STATIC_URL=STATIC_URL %}
 	            </section>
-	 			<img class='imageStream' style='display:block;' id="cameraImage{{ forloop.counter }}" src=""></img>
+	 			<img class='imageStream' style='display:block;' id="cameraImage{{ source.shortName }}" src=""></img>
 	 		</div>
  		{% endfor %}
 	</div>
