minor changes to template and fix commented out in javascript liveImageStream

--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -43,6 +43,7 @@
 		{% for source in sources %}
 			<div class="item" id="item{{ forloop.counter }}" style="background-color:#e5e5e5;">
 	            <div> Camera Name: <b>{{ source.name }}</b> </div>
+	            Local Time: <span id="image{{ source.shortName }}"></span>
 				<section>
 	            {% include "xgds_video/video_notes.html" with data=source.form source=source STATIC_URL=STATIC_URL %}
 	            </section>
