--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -1,5 +1,6 @@
 {% with form=data %}
 {% if user.is_authenticated %}
+<!--
 <div style="clear:left;padding-top:2px; padding-bottom:2px;" >
 	<form id="create_note{{ form.index }}" class="create_note_form" action="" method="POST">
 		<input type="hidden" id="id_index" value="{{ form.index }}" >
@@ -12,7 +13,7 @@
 		<div style="clear:left; padding-top:3px;">
 			<div style="float:left;padding-right: 5px;">
 				<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
-			</div>
+			</div><br/>
 	        <div style="float:left; ">
 	        	<label for="id_tags{{form.index}}">Tags:</label>
 	        	<input id="id_tags{{ form.index }}" type="text" class="tags" />
@@ -22,5 +23,6 @@
         </div>
   </form>
 </div>
+-->
 {% endif %}
 {% endwith %}
