tuning navigation and tab selection

--- a/xgds_video/templates/xgds_video/image_stream_subnav.html
+++ b/xgds_video/templates/xgds_video/image_stream_subnav.html
@@ -5,8 +5,8 @@
 <div class="sitemenu-nav-secondary">
 	<ul>
 		<li {% currentnav live_image_stream %}><a href="{% url 'live_image_stream' %}">Live</a></li>
-		<li {% currentnav xgds_video_recorded %}><a href="{% url 'xgds_video_recorded' %}">Archived</a></li>
-		<li {% currentnav search_image_streams %}><a href="{% url 'search_image_streams' %}">Search</a></li>
+		<li {% currentnav xgds_video_recorded %}><a href="{% url 'xgds_video_recorded' %}">Recorded</a></li>
+		<li {% currentnav xgds_video_list %}><a href="{% url 'xgds_video_list' %}">List</a></li>
   	</ul>
 </div>
 </form>
