--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -48,7 +48,7 @@
 	{% if messages %}
 	    <ul class="messages" id="errorMessage" style="color:red;">
 	    {% for message in messages %}
-	        <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	        <li>{% if message.tags %} {{ message.tags }}: {% endif %}  {{ message }}</li>
 	    {% endfor %}
 	    </ul>
 	{% endif %}
