geospatial data page for each image is working

--- a/xgds_video/templates/xgds_video/SearchImageStreams.html
+++ b/xgds_video/templates/xgds_video/SearchImageStreams.html
@@ -40,7 +40,7 @@
  	{% for flight in flightNames %}
 		<tr>
 			<td>
-				<a href="{% url 'flight_video_recorded' flight %}">{{ flight }}</a>
+				<a href="{% url 'xgds_video_recorded' flight %}">{{ flight }}</a>
 			</td>
 		</tr>
 	{% endfor %}
