--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -29,6 +29,11 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/font-awesome/css/font-awesome.css"></link>
 {% endblock cssExtras %}
 
+{% block jsSetVars %}
+  {{ block.super }}
+  mvpAppUrl = '{{ mvpAppUrl }}';
+{% endblock %}
+
 {% block scripts %}
 {% endblock %}
 
@@ -97,12 +102,13 @@
 			<div class="item" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
 	                 <div class="toprow-left">Camera Name: <b>{{ source.name }}</b></div>
-		 	                     <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' %}?source={{ source.shortName }}&episode={{ episode.shortName }}" target="new">New Window</a>
+                     <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="new">New Window</a>
 	                 {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
 	                 {% endif %}
 	                 {% endwith %}
+	                 <a class="mybutton toprow-right" id="image_info"  onclick="imageInfoButtonEvent('{{ source.shortName }}')"> Image Info </a>
 	            </div>
 				<section>
              		{% include "xgds_video/video_notes.html" with data=source.form source=source.shortName STATIC_URL=STATIC_URL %}
@@ -135,8 +141,7 @@ var indexFileUrl = null;
     indexFileUrl = "{% url 'xgds_video_index_file' 'flightName' 'sourceShortName' 'segmentIndex' %}";
 {% endif %}
 
- {% if segmentsJson %}
- 
+{% if segmentsJson %}
     //globals
     var xgds_video = { masterSlider: '',
                        playFlag: true,
