style table header

--- a/xgds_video/templates/xgds_video/SearchImageStreams.html
+++ b/xgds_video/templates/xgds_video/SearchImageStreams.html
@@ -30,7 +30,7 @@
 
 {% block contents %}
 <table id="image_streams_table">
-<thead>
+<thead class="table_header">
 	<tr>
 		<th class="image_streams_table_headers">Date</th>
 	</tr>
