--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -14,7 +14,9 @@
         var submitNoteUrl = '{% url record_simple %}';
     </script>
  	<script src="{{STATIC_URL}}xgds_video/js/liveImageStream.js" type="text/javascript"></script>
+ 	{% if INCLUDE_NOTE_INPUT %}
  	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+ 	{% endif %}
 {% endblock headExtras %}
 
 {% block cssExtras %}
@@ -47,9 +49,11 @@
                           <br>
                           <span id="timestamp_{{source.shortName }}"></span>
                 </div>
+                {% if INCLUDE_NOTE_INPUT %}
 				<section>
 	            {% include "xgds_video/video_notes.html" with data=source.form source=source STATIC_URL=STATIC_URL %}
 	            </section>
+	            {% endif %}
 	 			<img class='imageStream' style='display:block;' id="cameraImage{{ source.shortName }}" src=""></img>
 	 		</div>
  		{% endfor %}
