update to table display css

--- a/xgds_video/templates/xgds_video/SearchImageStreams.html
+++ b/xgds_video/templates/xgds_video/SearchImageStreams.html
@@ -64,7 +64,7 @@
 	        iDisplayLength: 20,
 	        bLengthChange: false,
 			bSort: true,
-	        bJQueryUI: true,
+	        bJQueryUI: false,
 	        sScrollY: '28em'
 		} );
 
