--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -12,8 +12,8 @@
 		<div style="clear:left; padding-top:3px;">
 			<div style="float:left;padding-right: 5px;">
 				<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
-			</div><br/>
-	        <div style="float:left; ">
+			</div>
+			<div style="float:left; ">
 	        	<label for="id_tags{{form.index}}">Tags:</label>
 	        	<input id="id_tags{{ form.index }}" type="text" class="tags" />
 	        	{{ form.extras }}
