updated displayRecordedVideo to use relationship between segments and episodes, and working on legend

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -3,6 +3,7 @@
 body {
 	color: black;
 }
+
 .tags ul{
     list-style: none;
     padding: 0px;
@@ -94,6 +95,11 @@ div.ui-slider-range.ui-widget-header {
     position: absolute;
     clear:both;
     font-size:10px;
+}
+
+.legend-segment {
+	max-height: 4px;
+	height: 4px;
 }
 
 #seekTimeBox {
