--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -70,8 +70,8 @@
    			{% endif %}
    		</table>
 
- 		<fieldset style=" border-color: #e5e5e5">
-	 		<div id="masterSlider" class="masterSlider"></div>
+ 		<fieldset id="videoFieldset">
+	 	  <div id="masterSlider" class="masterSlider"></div>
           <div> 
           	<a class="btn btn-small btn-info" href="#" onclick=playPauseButtonCallBack()>
               <i id="playbutton" class="fa fa-pause fa-2x"></i>
@@ -99,7 +99,7 @@
 			<div class="item" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
 	            <div class="buttons">
 	                 <div class="toprow-left">Camera: <b>{{ source.name }}</b></div>
-                     <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="new">New Window</a>
+                     <a class="mybutton toprow-right" href="{% url 'xgds_video_recorded' flightName source.shortName %}" target="new" style="width:130px">New Window</a>
 	                 {% with feed=source.feed_set.all.0.shortName %}
 	                 {% if feed %}
 	                     <a class="mybutton" id=toprow href="{% url 'xgds_video_live' feed %}">Live</a>
